// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots atoms|Alert danger 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  background-color: #ef5350;
  color: #fff;
  padding: 0.5em 1em;
  border: none;
  border-radius: 4px;
}

<div
  className="c0"
>
  <div
    className="c1"
    color="white"
  >
    Things went south
  </div>
</div>
`;

exports[`Storyshots atoms|Alert default 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  background-color: #00a8d8;
  color: #fff;
  padding: 0.5em 1em;
  border: none;
  border-radius: 4px;
}

<div
  className="c0"
>
  <div
    className="c1"
    color="white"
  >
    Something is going on
  </div>
</div>
`;

exports[`Storyshots atoms|Alert success 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  background-color: #4caf50;
  color: #fff;
  padding: 0.5em 1em;
  border: none;
  border-radius: 4px;
}

<div
  className="c0"
>
  <div
    className="c1"
    color="white"
  >
    All is well
  </div>
</div>
`;
